fixed alignment for multiline links in help text

--- a/frontend/styles/global/_global.scss
+++ b/frontend/styles/global/_global.scss
@@ -164,8 +164,6 @@ form,
       &__no-wrap {
         // adjust for multi-line custom links
         .icon {
-          padding-left: 4px;
-          position: relative;
           top: 2px;
         }
       }
